gcc/testsuite/rust/compile/mod_in_types_ns2.rs
mod foo {
    mod bar {}

    fn baz() -> bar {} // { dg-error "expected type, found module" }
}
